--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ Flask-CORS==4.0.0
 Werkzeug==2.3.7
 
 # AI/ML Dependencies - Semantic Segmentation
-torch
-torchvision
+--extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.2.2+cpu
+torchvision==0.17.2+cpu
 segmentation-models-pytorch==0.3.3
 timm==0.9.2
 # efficientnet-pytorch and pretrainedmodels used for training only; keep if needed
@@ -24,9 +25,9 @@ albumentations==1.3.1
 tqdm==4.66.1
 
 # Production Server (not used on Windows dev)
-# gunicorn==21.2.0
 # gevent==23.7.0
 
+gunicorn==21.2.0
 # Monitoring and Logging
 psutil==5.9.5
 
