--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ timm==0.9.2
 # efficientnet-pytorch and pretrainedmodels used for training only; keep if needed
 efficientnet-pytorch==0.7.1
 pretrainedmodels==0.7.4
-opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78
 Pillow==10.0.1
 numpy==1.26.4
 albumentations==1.3.1
