--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,15 @@ Flask-CORS==4.0.0
 Werkzeug==2.3.7
 
 # AI/ML Dependencies - Semantic Segmentation
---extra-index-url https://download.pytorch.org/whl/cpu
 torch
 torchvision
 segmentation-models-pytorch==0.3.3
 timm==0.9.2
-opencv-python-headless==4.8.1.78
-Pillow==10.0.1
-numpy==1.26.4
-albumentations==1.3.1
-opencv-python-headless==4.8.1.78
-Pillow==10.0.1
+# efficientnet-pytorch and pretrainedmodels used for training only; keep if needed
+efficientnet-pytorch==0.7.1
+pretrainedmodels==0.7.4
+opencv-python==4.8.1.78
+Pillow>=10.1.0
 numpy==1.26.4
 albumentations==1.3.1
 
@@ -26,9 +24,9 @@ albumentations==1.3.1
 tqdm==4.66.1
 
 # Production Server (not used on Windows dev)
+# gunicorn==21.2.0
 # gevent==23.7.0
 
-gunicorn==21.2.0
 # Monitoring and Logging
 psutil==5.9.5
 
