--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ timm==0.9.2
 efficientnet-pytorch==0.7.1
 pretrainedmodels==0.7.4
 opencv-python==4.8.1.78
-Pillow>=10.1.0
+Pillow==10.0.1
 numpy==1.26.4
 albumentations==1.3.1
 
@@ -23,9 +23,9 @@ albumentations==1.3.1
 # Utilities
 tqdm==4.66.1
 
-# Production Server (enabled for Render/Heroku deploys)
-gunicorn==21.2.0
-gevent==23.7.0
+# Production Server (not used on Windows dev)
+# gunicorn==21.2.0
+# gevent==23.7.0
 
 # Monitoring and Logging
 psutil==5.9.5
